[package]
name = "nostr-types"
version = "0.6.1-unstable"
edition = "2021"
authors = ["Mike Dilger <mike@mikedilger.com>"]
description = "Types for nostr protocol handling"
repository = "https://github.com/mikedilger/nostr-types"
documentation = "https://docs.rs/nostr-types"
readme = "README.md"
keywords = [ "nostr" ]
license = "MIT"

[features]
default = []

[dependencies]
aes = "0.8"
base64 = "0.21"
bech32 = "0.9"
cbc = { version = "0.1", features = [ "std" ] }
chacha20poly1305 = "0.10"
core-net = "0.1"
derive_more = "0.99"
hex = "0.4"
hmac = "0.12"
http = "0.2"
k256 = { version = "0.13", features = [ "schnorr", "ecdh", "std" ] }
inout = "0.1.3"
lazy_static = "1.4"
lightning-invoice = "0.23"
linkify = "0.9"
num_cpus = "1"
pbkdf2 = { version = "0.12", default-features = false, features = [ "hmac", "sha2", "std" ] }
rand_core = "0.6"
regex = "1.8"
scrypt = "0.11"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
sha2 = "0.10"
speedy = { git = "https://github.com/mikedilger/speedy", rev="b8b713a7006958616dd3ef3ba63217740b4b09c2", optional = true }
thiserror = "1.0"
thread-priority = "0.13"
url = "2.4"
zeroize = "1.6"

# Force scrypt to build with release-like speed even in dev mode
[profile.dev.package.scrypt]
opt-level = 3
debug-assertions = false
overflow-checks = false
