[package]
name = "nostr-types"
version = "0.8.0-unstable"
edition = "2021"
authors = ["Mike Dilger <mike@mikedilger.com>"]
description = "Types for nostr protocol handling"
repository = "https://github.com/mikedilger/nostr-types"
documentation = "https://docs.rs/nostr-types"
readme = "README.md"
keywords = [ "nostr" ]
license = "MIT"

[features]
default = [ ]
nip46 = [
   "client"
]
client = [
   "futures-util",
   "http",
   "reqwest",
   "textnonce",
   "tokio",
   "tokio-tungstenite",
   "tungstenite",
]

[dependencies]
aes = "0.8"
aho-corasick = "1.1"
async-trait = "0.1"
base64 = "0.22"
bech32 = "0.11"
cbc = { version = "0.1", features = [ "std" ] }
chacha20poly1305 = "0.10"
chacha20 = "0.9"
core-net = "0.1"
derive_more = "0.99"
futures-util = { version = "0.3", optional = true }
hex = "0.4"
hmac = "0.12"
http = { version = "1.1", optional = true }
lazy_static = "1.4"
lightning-invoice = { git = "https://github.com/mikedilger/rust-lightning", rev = "7a62cb4106d449bc4d1724920b73918d501bb3a9" }
linkify = "0.10"
nip44 = { git = "https://github.com/mikedilger/nip44", rev="a55cd3850634d7e462c107a37a068f829670d6a2" }
num_cpus = "1"
pbkdf2 = { version = "0.12", default-features = false, features = [ "hmac", "sha2", "std" ] }
rand_core = "0.6"
rand = "0.8"
regex = "1.10"
reqwest = { version = "0.12", default-features=false, features = ["brotli", "deflate", "gzip", "json", "stream"], optional = true }
scrypt = "0.11"
secp256k1 = { version = "0.29", features = [ "hashes", "global-context", "rand-std", "serde" ] }
serde = { version = "1.0", features = [ "derive", "rc" ] }
serde_json = "1.0"
sha2 = "0.10"
speedy = { version = "0.8.7", optional = true }
textnonce = { version = "1", optional = true }
thiserror = "1.0"
thread-priority = "1.0"
tokio = { version = "1", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.26", default-features = false, features = [ "connect", "handshake" ], optional = true }
tungstenite = { version = "0.26", default-features = false, optional = true }
unicode-normalization = "0.1"
url = "2.5"
zeroize = "1.7"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

# Force scrypt to build with release-like speed even in dev mode
[profile.dev.package.scrypt]
opt-level = 3
debug-assertions = false
overflow-checks = false
